fixed text overflow and added character limit

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,7 @@
+* {
+  overflow-wrap: break-word;
+}
+
 @import url("https://fonts.googleapis.com/css2?family=Golos+Text:wght@400;700&family=Open+Sans&family=Poppins:wght@300;400;700&display=swap");
 
 body {
@@ -24,7 +28,7 @@ main {
 }
 
 .diary a {
-    color:black;
+  color: black;
 }
 
 a {
@@ -50,17 +54,17 @@ a {
 }
 
 .diary-page h1 {
-    font-family: "Golos Text", sans-serif;
-    font-size: 2rem;
-    font-weight: 700;
-    margin: 0.5rem 0;
-    color:black;
+  font-family: "Golos Text", sans-serif;
+  font-size: 2rem;
+  font-weight: 700;
+  margin: 0.5rem 0;
+  color: black;
 }
 
 .diary-page p {
-    font-family: "Open Sans", sans-serif;
-    font-size: 1rem;
-    font-weight: 400;
-    margin: 0.5rem 0.25rem;
-    color:black;
+  font-family: "Open Sans", sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  margin: 0.5rem 0.25rem;
+  color: black;
 }
